<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.IntermTermProject.com.dashboard.fragment.HomeFragment"
        android:label="@string/menu_home"

        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mycart"
        android:name="com.IntermTermProject.com.dashboard.fragment.MyCartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_mycart" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.IntermTermProject.com.dashboard.fragment.ShopsFragments"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.IntermTermProject.com.dashboard.fragment.AccountFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_account" />
</navigation>